// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrueFalse snapshot test with image 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample Short Answer Title with Image&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Réponse courte&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem with Image &lt;img style="--image-max-width: 400px" class="markdown-image" alt="" src="https://example.com/cat.gif"&gt;

                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

    &lt;div&gt;
      &lt;span class="gift-preview-answer-label"&gt;Réponse: &lt;/span&gt;&lt;input class="gift-input gift-preview-input" type="text" placeholder="A, B, C"&gt;
        &lt;/div&gt;
      &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;&lt;img alt="Sample Image" src="https://via.placeholder.com/150"&gt;&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`TrueFalse snapshot test with katex 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question true-false-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample True/False Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Vrai/Faux&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      &lt;span class="katex-display"&gt;&lt;span class="katex"&gt;&lt;span class="katex-mathml"&gt;&lt;math display="block" xmlns="http://www.w3.org/1998/Math/MathML"&gt;&lt;mrow&gt;&lt;mfrac&gt;&lt;mrow&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;mi&gt;z&lt;/mi&gt;&lt;/mrow&gt;&lt;mrow&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;mi&gt;y&lt;/mi&gt;&lt;/mrow&gt;&lt;/mfrac&gt;&lt;/mrow&gt;\\frac{zzz}{yyy}&lt;/math&gt;&lt;/span&gt;&lt;span aria-hidden="true" class="katex-html"&gt;&lt;span class="base"&gt;&lt;span style="height:1.988em;vertical-align:-0.8804em;" class="strut"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span class="mopen nulldelimiter"&gt;&lt;/span&gt;&lt;span class="mfrac"&gt;&lt;span class="vlist-t vlist-t2"&gt;&lt;span class="vlist-r"&gt;&lt;span style="height:1.1076em;" class="vlist"&gt;&lt;span style="top:-2.314em;"&gt;&lt;span style="height:3em;" class="pstrut"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span style="margin-right:0.03588em;" class="mord mathnormal"&gt;yyy&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.23em;"&gt;&lt;span style="height:3em;" class="pstrut"&gt;&lt;/span&gt;&lt;span style="border-bottom-width:0.04em;" class="frac-line"&gt;&lt;/span&gt;&lt;/span&gt;&lt;span style="top:-3.677em;"&gt;&lt;span style="height:3em;" class="pstrut"&gt;&lt;/span&gt;&lt;span class="mord"&gt;&lt;span style="margin-right:0.04398em;" class="mord mathnormal"&gt;zzz&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-s"&gt;​&lt;/span&gt;&lt;/span&gt;&lt;span class="vlist-r"&gt;&lt;span style="height:0.8804em;" class="vlist"&gt;&lt;span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;span class="mclose nulldelimiter"&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;&lt;/span&gt;
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="row g-3"&gt;
          &lt;div class="col-6"&gt;
            &lt;div class="w-100 p-3 d-flex align-items-center choice-button bg-success text-white"&gt;
              &lt;div class="d-flex align-items-center choice-button-content flex-grow-1"&gt;
                &lt;strong&gt;Vrai&lt;/strong&gt;
              &lt;/div&gt;
            &lt;/div&gt;
            &lt;div class="true-feedback"&gt;&lt;div&gt;Correct!&lt;/div&gt;&lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="col-6"&gt;
            &lt;div class="w-100 p-3 d-flex align-items-center choice-button bg-danger text-white"&gt;
              &lt;div class="d-flex align-items-center choice-button-content flex-grow-1"&gt;
                &lt;strong&gt;Faux&lt;/strong&gt;
              &lt;/div&gt;
            &lt;/div&gt;
            &lt;div class="false-feedback"&gt;&lt;div&gt;Incorrect!&lt;/div&gt;&lt;/div&gt;
          &lt;/div&gt;
        &lt;/div&gt;
    &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`TrueFalse snapshot test with moodle 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question true-false-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample True/False Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Vrai/Faux&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="row g-3"&gt;
          &lt;div class="col-6"&gt;
            &lt;div class="w-100 p-3 d-flex align-items-center choice-button bg-success text-white"&gt;
              &lt;div class="d-flex align-items-center choice-button-content flex-grow-1"&gt;
                &lt;strong&gt;Vrai&lt;/strong&gt;
              &lt;/div&gt;
            &lt;/div&gt;
            &lt;div class="true-feedback"&gt;&lt;div&gt;Correct!&lt;/div&gt;&lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="col-6"&gt;
            &lt;div class="w-100 p-3 d-flex align-items-center choice-button bg-danger text-white"&gt;
              &lt;div class="d-flex align-items-center choice-button-content flex-grow-1"&gt;
                &lt;strong&gt;Faux&lt;/strong&gt;
              &lt;/div&gt;
            &lt;/div&gt;
            &lt;div class="false-feedback"&gt;&lt;div&gt;Incorrect!&lt;/div&gt;&lt;/div&gt;
          &lt;/div&gt;
        &lt;/div&gt;
    &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;

exports[`TrueFalse snapshot test with plain text 1`] = `
<DocumentFragment>
  &lt;section class="gift-preview-question true-false-question"&gt;
  &lt;div class="gift-preview-title"&gt;
    &lt;span&gt;
      &lt;span class="gift-preview-question-label"&gt;Sample True/False Title&lt;/span&gt;
    &lt;/span&gt;
    &lt;span class="gift-preview-type-badge-wrapper"&gt;
      &lt;span class="gift-preview-type-badge"&gt;Vrai/Faux&lt;/span&gt;
    &lt;/span&gt;
  &lt;/div&gt;

  &lt;div class="gift-preview-stem"&gt;
    &lt;span&gt;
      &lt;p class="present-question-stem"&gt;
                      Sample Stem
                  &lt;/p&gt;
    &lt;/span&gt;
  &lt;/div&gt;

        &lt;div class="row g-3"&gt;
          &lt;div class="col-6"&gt;
            &lt;div class="w-100 p-3 d-flex align-items-center choice-button bg-success text-white"&gt;
              &lt;div class="d-flex align-items-center choice-button-content flex-grow-1"&gt;
                &lt;strong&gt;Vrai&lt;/strong&gt;
              &lt;/div&gt;
            &lt;/div&gt;
            &lt;div class="true-feedback"&gt;&lt;div&gt;Correct!&lt;/div&gt;&lt;/div&gt;
          &lt;/div&gt;
          &lt;div class="col-6"&gt;
            &lt;div class="w-100 p-3 d-flex align-items-center choice-button bg-danger text-white"&gt;
              &lt;div class="d-flex align-items-center choice-button-content flex-grow-1"&gt;
                &lt;strong&gt;Faux&lt;/strong&gt;
              &lt;/div&gt;
            &lt;/div&gt;
            &lt;div class="false-feedback"&gt;&lt;div&gt;Incorrect!&lt;/div&gt;&lt;/div&gt;
          &lt;/div&gt;
        &lt;/div&gt;
    &lt;div class="gift-preview-feedback"&gt;
        &lt;p&gt;Sample Global Feedback&lt;/p&gt;
      &lt;/div&gt;&lt;/section&gt;
</DocumentFragment>
`;
